--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&family=Poppins&display=swap" rel="stylesheet">
+    
 <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
+
 </head>
 <body>
-   <section>
-       <div> <h1>Welcome to</h1>
-        <h1>Fahad khan web site</h1> 
-        <h2>Web Developer</h2></div>
+   <section class="top-banar">
+       <div class="half-width"> <h1>Welcome to</h1>
+        <h1><span  class="orange-color">Fahad khan</span> world</h1> 
+        <h2>Web Developer</h2>
+      <p> I am a web developer.I can make a good level,strong website that is prity good.Do you need any web site? if you need any web site you can hire me.</p>    
+      <a target="blank" class="button1" href="https://www.linkedin.com/company/programminghero">Hire me</a>
+      </div>  
+    <div class="half-width">  <img src="images/fahad.png" alt="">  </div> 
+
    </section>
 </body>
 </html>
